// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All kinds 1`] = `
HTMLCollection [
  <div
    class="s-WFVnM7df3-nu"
    style="top: 125px; left: 150px; --color: cyan; pointer-events: none;"
  >
    Gaspard
  </div>,
  <div
    class="s-WFVnM7df3-nu"
    style="top: 140px; left: 150px; --color: #7a7a7a; pointer-events: none;"
  >
    3
  </div>,
  <figure
    class="s-engCJu8q-fNe positioned colored"
    style="--dimension: 60px; --color: purple; --top: 125px; --left: 150px; --border-width: 3px"
  >
    <img
      alt="avatar for Gaspard"
      class="s-engCJu8q-fNe"
      height="60"
      referrerpolicy="no-referrer"
      width="60"
    />
     
    <figcaption
      class="s-engCJu8q-fNe"
    >
      Gaspard
    </figcaption>
  </figure>,
  <div
    class="s-w_zt7UkIutQR"
    style="top: 200px; left: 50px; --color: #ffffff;"
  >
    <span
      class="material-icons s-w_zt7UkIutQR"
    >
      layers
    </span>
    
  </div>,
  <div
    class="s-w_zt7UkIutQR"
    style="top: 200px; left: 100px; --color: #369d2b;"
  >
    <span
      class="material-icons s-w_zt7UkIutQR"
    >
      
    </span>
    Jane
  </div>,
]
`;

exports[`Feedback for action 1`] = `
<div
  class="s-w_zt7UkIutQR"
  style="top: 200px; left: 50px; --color: #ffffff;"
>
  <span
    class="material-icons s-w_zt7UkIutQR"
  >
    layers
  </span>
  
</div>
`;

exports[`Feedback for player 1`] = `
<div
  class="s-w_zt7UkIutQR"
  style="top: 200px; left: 50px; --color: #ffa280;"
>
  <span
    class="material-icons s-w_zt7UkIutQR"
  >
    
  </span>
  Jane
</div>
`;

exports[`For player 1`] = `
<div
  class="s-WFVnM7df3-nu"
  style="top: 125px; left: 150px; --color: #967d3e; pointer-events: none;"
>
  Gaspard
</div>
`;

exports[`Multiple 1`] = `
HTMLCollection [
  <div
    class="s-WFVnM7df3-nu"
    style="top: 100px; left: 50px; --color: #7a7a7a; pointer-events: none;"
  >
    5
  </div>,
  <div
    class="s-WFVnM7df3-nu"
    style="top: 200px; left: 150px; --color: #7a7a7a; pointer-events: none;"
  >
    27
  </div>,
]
`;

exports[`Peer pointer 1`] = `
<figure
  class="s-engCJu8q-fNe positioned colored"
  style="--dimension: 60px; --color: #567cdc; --top: 125px; --left: 150px; --border-width: 3px"
>
  <img
    alt="avatar for Gaspard"
    class="s-engCJu8q-fNe"
    height="60"
    referrerpolicy="no-referrer"
    width="60"
  />
   
  <figcaption
    class="s-engCJu8q-fNe"
  >
    Gaspard
  </figcaption>
</figure>
`;

exports[`Single 1`] = `
<div
  class="s-WFVnM7df3-nu"
  style="top: 100px; left: 50px; --color: #7a7a7a; pointer-events: auto;"
>
  5
</div>
`;
